<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nipponit.manojm.scanner.DealerActivity">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/dtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="monospace"
            android:text="@string/dtitle1"/>

        <AutoCompleteTextView
            android:id="@+id/area_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dtitle1"
            android:singleLine="true"
            android:imeOptions="actionNext"></AutoCompleteTextView>


        <TextView
            android:id="@+id/dtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="monospace"
            android:text="@string/dtitle2"
            android:layout_below="@+id/area_txt"/>

        <AutoCompleteTextView
            android:id="@+id/customer_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_below="@+id/dtitle2"></AutoCompleteTextView>


        <Button
            android:id="@+id/btndownload"
            android:layout_width="150sp"
            android:layout_height="65sp"
            android:layout_below="@+id/customer_txt"
            android:theme="@style/MyButton"
            android:text="@string/btndownload"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="150sp"
            android:layout_height="65sp"
            android:layout_below="@+id/customer_txt"
            android:layout_toRightOf="@+id/btndownload"
            android:theme="@style/MyButton"
            android:text="@string/btnContinue"
            android:fontFamily="monospace"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
