<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nipponit.manojm.scanner.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        >

        <TextView
            android:id="@+id/lblcusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ff2600"
            android:layout_marginBottom="15px"/>

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblcusName"
            android:text="@string/scan_title1"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="monospace"
            />
        <EditText
            android:id="@+id/txtMatDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title1"
            android:inputType="text"
            android:enabled="false"
            android:textColor="@android:color/tab_indicator_text"
            android:fontFamily="monospace"/>


        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMatDesc"
            android:text="@string/scan_title2"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="monospace"/>
        <EditText
            android:id="@+id/txtMatCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title2"
            android:inputType="text"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textColor="@android:color/tab_indicator_text"/>


        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMatCode"
            android:text="@string/scan_title3"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/txtMatBatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title3"
            android:inputType="text"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textColor="@android:color/tab_indicator_text"/>


        <TextView
            android:id="@+id/title7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMatBatch"
            android:text="@string/scan_title7"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/txtMatExMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title7"
            android:inputType="text"
            android:fontFamily="monospace"
            android:enabled="false"
            android:textColor="@android:color/tab_indicator_text"/>


        <!-- Begin Layout for Textview in Quantity -->
        <LinearLayout
            android:id="@+id/layout_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txtMatExMonth"
            android:weightSum="3">



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_title5"
                    android:textSize="18sp"
                    android:fontFamily="monospace"
                    android:textColor="@android:color/black"/>
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_title4"
                    android:textSize="18sp"
                    android:fontFamily="monospace"
                    android:textColor="@android:color/black"/>
                    />
            </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/scan_title4"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
                android:visibility="invisible"
            />
            />

            </LinearLayout>
        </LinearLayout>
        <!-- End Layout for Textview in Quantity -->


        <!-- Begin Layout for Edit Text in Quantity -->
        <LinearLayout
            android:id="@+id/layout_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_txt"
            android:weightSum="3">



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/txtBQty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:fontFamily="monospace"
                    android:textColor="@android:color/tab_indicator_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/txtSQty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:fontFamily="monospace"
                    android:textColor="@android:color/tab_indicator_text"
                    />

            </LinearLayout>
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <EditText
            android:id="@+id/txtMQty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textColor="@android:color/tab_indicator_text"
                android:visibility="invisible"
            />

            </LinearLayout>
        </LinearLayout>
        <!-- End Layout for Edit Text in Quantity -->


        <!-- Begin Layout for Buttons -->
        <LinearLayout
            android:id="@+id/layoutbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_edit"
            android:weightSum="3">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSend"
                android:theme="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:text="@string/btnsend"
                android:fontFamily="monospace"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnSysStock"
                    android:theme="@style/MyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnsysqty"
                    android:fontFamily="monospace"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnViewScan"
                    android:theme="@style/MyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:text="@string/btnscnqty"
                    />
            </LinearLayout>
        </LinearLayout>
        <!-- End Layout for Buttons -->
<TextView
    android:id="@+id/txt"
    android:layout_width="wrap_content"
    android:layout_height="495dp"
    android:layout_below="@+id/layoutbtn"
    android:fontFamily="monospace"
    android:textSize="25sp"
    android:text="" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
